[project]
name = "grafana-schema"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["grafana_schema"]

[tool.hatch.build.targets.sdist]
packages = ["grafana_schema"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
